# oop-matrix-calculator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
AdditionalFiles/: genMtrxTemplOperators.inl
DiagonalMatrixPackage/: DiagonalMatrix.h  constructors.cpp  methods.cpp
FriendFunctions/: friendDiagonal.tpp  friendGeneral.tpp
GeneralMatrixPackage/: GeneralMatrix.h  constructors.cpp  methods.cpp
Interface/: interfaceFunc.cpp  interfaceFunc.h
Interface/Auxiliary Functions/: auxiliaryFunc.cpp  auxiliaryFunc.h
MatrixAbstractPackage/: MatrixAbstract.h  constructors.cpp  methods.cpp
OverloadOperators/: diagMtrxTemplOperators.inl  genMtrxTemplOperators.inl
Program Interface/: interfaceDecl.hpp  startPrg.cpp
Program Interface/src/: interfaceDecl.hpp  mainMenu.cpp  startPrg.cpp
doc/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _diagonal_matrix_8hpp.html  _diagonal_matrix_8hpp_source.html  _general_matrix_8hpp.html  _general_matrix_8hpp_source.html  _matrix_abstract_8hpp.html  _matrix_abstract_8hpp_source.html  _r_e_a_d_m_e_8md.html  abstract_matrix_package_2src_2constructors_8tpp.html  annotated.html  (+77 more)
docs/: index.md
resources/: examplesMtrx.txt
src/: ChooseMtrxType.cpp  ChooseNmbrType.cpp  DiagonalMatrix.hpp  DiagonalMatrix.tpp  FriendDiagonal.tpp  FriendGeneral.tpp  GeneralMatrix.hpp  GeneralMatrix.tpp  InitMtrxObj.cpp  InterfaceDecl.hpp  MainMenu.cpp  MathControl.tpp  MathFirstChooseMtrx.tpp  MathFirstMtrx.tpp  MathSecondChooseMtrx.tpp  MathSecondMtrx.tpp  MatrixAbstract.hpp  MatrixAbstract.tpp  SetMtrxSize.cpp  StartPrg.cpp
(+167 files in other folders)
